# async_amqp

./: .clang-format  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Changelog  README.md  config.h.in
apps/: CMakeLists.txt  main.cpp
cmake/: BoostTestHelpers.cmake
examples/: CMakeLists.txt  main.cpp  simple.cpp
include/async_amqp/: channels.hpp  connection.hpp  multi_channels.hpp
include/kd/amqp/: connection.hpp
tests/: CMakeLists.txt  amqp_multi_test.cpp  amqp_test.cpp
